[package]
name = "tower-examples"
version = "0.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["http2"] }
tower = "0.5"
tokio = { version = "1.44", features = ["full"] }
http = "1.2.0"
hyper = {version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["service"] }
http-body-util = "0.1.2"
tower-reqwest = "0.4.1"
tower-http = { version = "0.6.2", features = ["full"] }
futures-util = "0.3"
wiremock = "0.6"
