[package]
name = "client"
version = "0.0.0"
edition = "2021"

[dependencies]

opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
reqwest = {version = "0.12.9", features = ["json"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

